# Gearbox

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs  shapes.rs  textured.rs
shaders/: Cargo.toml
shaders/src/: basic_material.rs  basic_shader.rs  basic_vertex.rs  common.rs  lib.rs  simple_textured.rs
src/: basic.rs  camera.rs  lib.rs  material.rs  mesh.rs  schedule.rs  transform.rs
src/material/: basic.rs  mod.rs  simple_textured.rs
src/mesh/: basic.rs  mod.rs
src/shapes/: capsule.rs  cone.rs  cube.rs  cylinder.rs  mod.rs  sphere.rs
src/vault/: bindless_textures.rs  handles.rs  mesh.rs  mod.rs
